5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1758_1185.log
== TEST (2019-05-28 11:36:47) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (i < 99):
		print(i)
	   i = i + 1
	cont = cont + 1
print(cont)
-- ERROR:
File "XXXX", line 11
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:17) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] < 99):
		print(i)
	   i = i + 1
	cont = cont + 1
print(cont)
-- ERROR:
File "XXXX", line 11
    i = i + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:46) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	   cont = cont + 1
	i = i + 1
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:23) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	   cont = cont + 1
	i = i + 1
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:17) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	   cont = cont + 1
	i = i + 1
	
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:40:29) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	   cont = cont + 1
	i = i + 1
	
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:15) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	   cont = cont + 1
	i = i + 1
	
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:16) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	   cont = cont + 1
	i = i + 1
	
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:16) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	   cont = cont + 1
	i = i + 1
	
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:25) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while (i < size(g)):
	if (g[i] > 99):
		print(i)
	    cont = cont + 1
	i = i + 1
	
print(cont)
-- ERROR:
File "XXXX", line 11
    cont = cont + 1
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:46:35) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while(i < size(g)):
	if(g[i]>99):
		print(i)
		cont = cont + 1
	i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:47:16) 
-- CODE:
from numpy import*

g = array(eval(input("g: ")))

i = 0
cont = 0

while(i < size(g)):
	if(g[i]>99):
		print(i)
		cont = cont + 1
	i = i + 1
print(cont)
-- EXECUTION TIME:
0.377555
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
